--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
     padding: 0px;
     box-sizing: border-box;
 
+    font-family: "Inter", sans-serif;
+    font-style: normal;
 }
+
+
 
 nav {
     padding: 16px 120px;
@@ -33,22 +37,79 @@ nav {
     border-radius: 4px;
     border: none;
 }
-#banner{padding: 70px 120px 134px 120px;
+
+#banner {
+    padding: 70px 120px 134px 120px;
 }
-#content{
+
+#content {
     display: flex;
-    flex-direction: column ;
-    align-items: center ;
+    flex-direction: column;
+    align-items: center;
     gap: 16px;
-}
-#early{
-     border-radius:1000px ;
-     align-items: center;
-     gap: 6px;
-     padding: 8px 12px;
-     display: flex;
-     background-color: white;
-     color: #30B868;
-     border: none;
 
 }
+
+#content h1 {
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+}
+
+#content p {
+    color: white;
+    text-align: center;
+}
+
+
+#early {
+    border-radius: 1000px;
+    align-items: center;
+    gap: 6px;
+    padding: 8px 12px;
+    display: flex;
+    background-color: white;
+    color: #30B868;
+    border: none;
+}
+
+#wh {
+    color: white;
+}
+
+#gr {
+    color: #30B868;
+}
+
+#first {
+    color: #ffffff;
+    padding: 12px 16px;
+    background-color: #30B868;
+    border-radius: 4px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#second {
+    border-radius: 4px;
+    align-items: center;
+    gap: 6px;
+    padding: 8px 12px;
+    display: flex;
+    color: white;
+    background-color: transparent;
+}
+
+#btn-cont {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+}
+
+header section {
+    background: url(/assets/hero-bg.png);
+}
+header{height: 674px;}
