--- a/style.css
+++ b/style.css
@@ -126,9 +126,15 @@ header {
 
 #main #heading h2 {
     font-size: 48px;
-    font-weight: bold;color: #001931; margin-bottom: 16px;letter-spacing: 2px;
+    font-weight: bold;
+    color: #001931;
+    margin-bottom: 16px;
+    letter-spacing: 2px;
 }
-#main #heading p{color: #627382;}
+
+#main #heading p {
+    color: #627382;
+}
 
 #cards-cont {
 
@@ -144,7 +150,7 @@ header {
 #main {
     padding-top: 16px;
     height: 616px;
-    
+
 
 }
 
@@ -152,7 +158,7 @@ header {
     padding: 24px;
     display: flex;
     justify-content: center;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     gap: 16px;
     border-radius: 8px;
@@ -161,7 +167,10 @@ header {
     height: 300px;
 
 }
-.card p{color: #627382;}
+
+.card p {
+    color: #627382;
+}
 
 #cards-cont .card img {
     max-width: 60px;
@@ -178,4 +187,47 @@ header {
 
 #cards-cont .card p {
     text-align: center;
+}
+
+/* knowledge section  */
+#knowledge {
+    padding: 120px;
+}
+
+#knowledge-cont {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+}
+
+#knowledge-cont h4 {
+    font-size: 16px;
+    color: #30B868;
+    margin-bottom: 16px;
+}
+
+#knowledge-cont h1 {
+    font-size: 48px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 16px;
+}
+
+#knowledge-cont span {
+    color: #627382;
+    font-size: 16px;
+
+}
+
+#checkbox {
+    margin-top: 40px;
+   
+}
+
+#checkbox p {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 5px;
+    margin-bottom: 16px;
 }
