--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: "Inter", sans-serif;
     font-style: normal;
 }
+.hover:hover{
+    cursor: pointer;
+    
+}
 
 
 
@@ -30,7 +34,7 @@ nav {
     color: black;
 }
 
-.btn {
+#btn {
     color: #ffffff;
     padding: 12px 16px;
     background-color: #30B868;
@@ -51,7 +55,7 @@ nav {
 }
 
 #content h1 {
-    font-size: 50px;
+    font-size: 70px;
     font-weight: 700;
     text-align: center;
 }
@@ -112,7 +116,9 @@ nav {
 
 header section {
     background: url(hero-bg.png);
-    
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header {
